--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-svg": "^13.8.0",
     "react-native-web": "~0.18.9"
   },
