--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,17 +12,19 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@gorhom/bottom-sheet": "^4.4.5",
     "expo": "~47.0.12",
+    "expo-cli": "^6.3.2",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "phosphor-react-native": "^1.1.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-reanimated": "~2.12.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-gesture-handler": "~2.8.0"
+    "react-native-view-shot": "3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
