--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@gorhom/bottom-sheet": "^4.4.5",
+    "axios": "^1.3.4",
     "expo": "~47.0.12",
     "expo-cli": "^6.3.2",
     "expo-font": "~11.0.1",
@@ -23,8 +24,9 @@
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.12.0",
     "react-native-svg": "13.4.0",
+    "react-native-view-shot": "3.4.0",
     "react-native-web": "~0.18.9",
-    "react-native-view-shot": "3.4.0"
+    "expo-file-system": "~15.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
