--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.9.0",
+    "axios": "^1.3.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemailer": "^6.9.1"
